--- a/app.json
+++ b/app.json
@@ -28,6 +28,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "config": {
+      "googleMapsApiKey": "AIzaSyAuPY0KaTGCOD494KuyaLo7Re9YwXh09tg"
     }
   }
 }
