--- a/package.json
+++ b/package.json
@@ -9,13 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.14",
+    "@react-navigation/native-stack": "^6.9.2",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
+    "babel-plugin-inline-import": "^3.0.0",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-maps": "^1.3.2",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-svg": "13.4.0",
+    "react-native-vector-icons": "^9.2.0",
+    "styled-components": "^5.3.6",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/styled-components-react-native": "^5.2.0",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "private": true
 }
